# robodog-esp32

./: Cargo.toml  README.md  gateway.html  start.sh  stop.sh
src/: config.rs  connection.rs  error.rs  interface.rs  lib.rs  main.rs  scan.rs  server.rs
templates/: index.html
